# HelixDrift

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  EXPLORATION_INDEX.md  EXPLORATION_REPORT.md  QUICK_SUMMARY.txt  README.md  TASKS.md  build.py  flake.nix  magic.sh
.agents/: BOOTSTRAP_PACKET.md  HANDOFF_TEMPLATE.md  MODEL_ASSIGNMENT.md  ORG_OPERATING_MODEL.md  OWNERSHIP_MATRIX.md  PLANNING_GATE.md  PROMPTS.md  README.md
.agents/teams/: pose-inference.md  rf-sync.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
artifacts/rf/: mocap_bridge_four_node_20ms.csv  mocap_bridge_four_node_20ms.summary  mocap_bridge_two_node_100hz.csv  mocap_bridge_two_node_100hz.summary  mocap_bridge_two_node_100hz_60s.csv  mocap_bridge_two_node_100hz_60s.summary  mocap_bridge_wrapper_smoke_100hz.csv  mocap_bridge_wrapper_smoke_100hz.summary  propico_esb_characterize_session79.csv
bootloader/: CMakeLists.txt  main.c
bootloader/port/: ed25519_pub_key.h  flash_map_backend.c  mcuboot_config.h  mcuboot_port.c
bootloader/port/mcuboot_config/: mcuboot_config.h
cmake/: arm-none-eabi-gcc.cmake
datasheets/: INDEX.md  README.md  fetch_datasheets.sh  sources.env
docs/: A5_REVIEW_AND_A1_STAGING.md  ADVERSARIAL_REVIEW_CODEX_WAVE.md  AGENT_WORKFLOW.md  CLAUDE_ORG_SPRINT2_REPORT.md  CODEX_NEXT_WAVES.md  DEV_JOURNAL_POLICY.md  M7_NRF_BRINGUP_CHECKLIST.md  M8_MOCAP_BRIDGE_WORKFLOW.md  MAGNETIC_CALIBRATION_RISK_SPEC.md  NRF52840_BLE_OTA_CHECKPOINT.md  NRF52840_DONGLE_GETTING_STARTED.md  NRF52_SELECTION.md  NRF_BLE_OTA_WORKFLOW.md  NRF_BLE_REFERENCE_WORKFLOW.md  NRF_HUB_RELAY_OTA.md  NRF_OTA_MEMORY_PLAN.md  OTA_CODE_REVIEW_REPORT.md  PER_SENSOR_VALIDATION_MATRIX.md  PRODUCT_ARCHITECTURE_ROADMAP.md  PR_CHECKLIST.md  PYTHON_ANALYSIS_PLAN.md  RF.md  RF_CROSS_TAG_SPAN_INVESTIGATION.md  RF_DESIGN.md  RF_DRIFT_HYPOTHESIS_REFUTED.md  RF_FIFO1_DISCOVERY.md  RF_MORNING_2026-04-23_SUMMARY.md  RF_OVERNIGHT_2026-04-23_SUMMARY.md  RF_PROTOCOL.md  RF_PROTOCOL_REFERENCE.md  RF_ROBUSTNESS_REPORT.md  RF_STAGE3_CLOSEOUT.md  RF_STAGE4_TDMA_DESIGN.md  RF_SYNC_DECISION_LOG.md  RF_SYNC_SIMULATION_SPEC.md  RF_TIME_SYNC_REFERENCE.md  RF_V18_FINDINGS.md  RF_V19_FINDINGS.md  RF_V20_FINDINGS.md  RF_V22_FINDINGS.md  (+19 more)
docs/design/: wroom32-mocap-node.md
docs/reviews/: CR-25da7ff-mcuboot-ota-bootloader.md  avengers_brainstorm_prompt_2026-04-23.md  codex_2026-04-21.md  codex_2026-04-22_followup.md  codex_2026-04-22_round3.md  codex_2026-04-22_round4.md  codex_2026-04-22_round5.md  codex_2026-04-22_round6.md  codex_2026-04-23_avengers.md  codex_2026-04-23_round10.md  codex_2026-04-23_round7.md  codex_2026-04-23_round8.md  codex_2026-04-23_round9.md  codex_2026-04-23_stage4_fate.md  copilot_2026-04-21.md  copilot_2026-04-22_followup.md  copilot_2026-04-22_round3.md  copilot_2026-04-22_round4.md  copilot_2026-04-22_round5.md  copilot_2026-04-22_round6.md  copilot_2026-04-23_avengers.md  copilot_2026-04-23_round10.md  copilot_2026-04-23_round7.md  copilot_2026-04-23_round8.md  copilot_2026-04-23_round9.md  copilot_2026-04-23_stage4_fate.md  internal_agents_2026-04-23_avengers.md  path_x1_sanity_2026-04-22.md  round10_drift_hypothesis_prompt_2026-04-23.md  round4_stage2_measurement_prompt_2026-04-22.md  round5_stage3_results_prompt_2026-04-22.md  round6_consolidated_prompt_2026-04-22.md  round7_code_review_prompt_2026-04-23.md  round8_followup_prompt_2026-04-23.md  round9_final_prompt_2026-04-23.md  stage4_fate_brainstorm_prompt_2026-04-23.md
docs/validation/: ON_TARGET_VALIDATION.md  TEST_LOG_TEMPLATE.md
examples/esp32s3-mocap-node/: CMakeLists.txt  README.md  partitions_ota.csv  sdkconfig  sdkconfig.defaults
examples/esp32s3-mocap-node/main/: CMakeLists.txt  main.c
examples/wroom32-mocap-node/: CMakeLists.txt  partitions_ota.csv  sdkconfig.defaults
examples/wroom32-mocap-node/main/: CMakeLists.txt  main.c
firmware/common/: BlinkEngine.cpp  BlinkEngine.hpp  MocapBleSender.cpp  MocapBleSender.hpp  MocapHealthTelemetry.hpp  MocapNodeLoop.hpp  MocapProfiles.hpp  TimestampSynchronizedTransport.hpp
firmware/platform/: startup_nrf52840.S  startup_nrf52dk_minimal.S
keys/: README.md  dev_signing_key.pem  dev_signing_key_pub.pem
patches/: 0001-mcuboot-nrf-cleanup-gpio-present-check.patch
scripts/: sign_firmware.sh  sign_nrf52dk_ota_probe.sh
simulators/: README.md  TASKS.md
simulators/docs/: CALIBRATION_SIM_BRAINSTORM.md  DESIGN.md  DEV_JOURNAL.md
simulators/fixtures/: CsvExport.hpp  SimMetrics.hpp  VirtualMocapNodeHarness.hpp  VirtualSensorAssembly.hpp
src/: main.cpp
tests/: test_ble_ota_service.cpp  test_blink_engine.cpp  test_esp32_ota_flash_backend.cpp  test_flash_word_packer.cpp  test_mcuboot_overwrite_only_trailer.cpp  test_mocap_ble_sender.cpp  test_mocap_health_telemetry.cpp  test_mocap_node_loop.cpp  test_mocap_profiles.cpp  test_ota_manager.cpp  test_sensor_fusion_task.cpp  test_timestamp_synchronized_transport.cpp  test_uart_ota_protocol.cpp
tools/: README.md  imgtool.sh
tools/dev/: doctor.sh  (+2 more)
zephyr_apps/nrf52840-mocap-bridge/: CMakeLists.txt  Kconfig  central.conf  node.conf  node_usb_debug.conf  prj.conf  sysbuild.cmake  sysbuild.conf
zephyr_apps/nrf52840-mocap-bridge/boards/: promicro_nrf52840_nrf52840.conf  promicro_nrf52840_nrf52840.overlay
zephyr_apps/nrf52840-mocap-bridge/src/: ZephyrOtaFlashBackend.cpp  main.c  main.cpp  ota_hub_relay.cpp  ota_hub_relay.hpp  usbd_init.c  usbd_init.h
zephyr_apps/nrf52840-mocap-bridge/sysbuild/mcuboot/boards/: promicro_nrf52840_nrf52840.conf
zephyr_apps/nrf52dk-ota-ble/: CMakeLists.txt  Kconfig  pm_static_promicro_nrf52840_nrf52840.yml  prj.conf  sysbuild.cmake  v1-nrf52840dongle.conf  v1-promicro_nrf52840.conf  v1.conf  v2-nrf52840dongle.conf  v2-promicro_nrf52840.conf  v2.conf
zephyr_apps/nrf52dk-ota-ble/boards/: promicro_nrf52840_nrf52840.overlay
zephyr_apps/nrf52dk-ota-ble/src/: ZephyrOtaFlashBackend.cpp  ZephyrOtaFlashBackend.hpp  main.cpp
zephyr_apps/nrf52dk-ota-ble/sysbuild/mcuboot/: prj.conf
zephyr_apps/nrf52dk-ota-ble/sysbuild/mcuboot/boards/: nrf52840dongle_nrf52840.conf  promicro_nrf52840_nrf52840.conf
(+232 files in other folders)
