idf_component_register(
    SRCS
        "main.c"
        "../src/board_xiao_esp32s3.cpp"
        "../src/Esp32OtaFlashBackend.cpp"
        "../../../firmware/common/ota/OtaManager.cpp"
        "../../../firmware/common/ota/BleOtaService.cpp"
    INCLUDE_DIRS
        "."
        "../src"
        "../../../firmware/common/ota"
    REQUIRES
        app_update
        bt
        esp_hw_support
        freertos
        log
        nvs_flash
)
